--- a/TrafficReport/Strings/en-US/Resources.resw
+++ b/TrafficReport/Strings/en-US/Resources.resw
@@ -117,34 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AddAppBarButton.Label" xml:space="preserve">
-    <value>add</value>
+  <data name="Begin trip" xml:space="preserve">
+    <value>Begin trip</value>
   </data>
-  <data name="Header.Text" xml:space="preserve">
-    <value>MY APPLICATION</value>
+  <data name="ButtonCancel.Content" xml:space="preserve">
+    <value>Cancel</value>
   </data>
-  <data name="NavigationFailedExceptionMessage" xml:space="preserve">
-    <value>Navigation failed.</value>
+  <data name="ButtonRecord.Content" xml:space="preserve">
+    <value>Begin trip</value>
   </data>
-  <data name="NewItemDescription" xml:space="preserve">
-    <value>Item Description: Pellentesque porta, mauris quis interdum vehicula, urna sapien ultrices velit, nec venenatis dui odio in augue. Cras posuere, enim a cursus convallis, neque turpis malesuada erat, ut adipiscing neque tortor ac erat.</value>
-  </data>
-  <data name="NewItemTitle" xml:space="preserve">
-    <value>Item Title: {0}</value>
+  <data name="End trip" xml:space="preserve">
+    <value>End trip</value>
   </data>
   <data name="Pivot.Title" xml:space="preserve">
-    <value>MY APPLICATION</value>
+    <value>TRAFFIC REPORT</value>
   </data>
-  <data name="PivotItem1.Header" xml:space="preserve">
-    <value>first</value>
+  <data name="PivotItemForecast.Header" xml:space="preserve">
+    <value>forecast</value>
   </data>
-  <data name="PivotItem2.Header" xml:space="preserve">
-    <value>second</value>
-  </data>
-  <data name="SecondaryButton1.Label" xml:space="preserve">
-    <value>secondary command 1</value>
-  </data>
-  <data name="SecondaryButton2.Label" xml:space="preserve">
-    <value>secondary command 2</value>
+  <data name="PivotItemRecord.Header" xml:space="preserve">
+    <value>record</value>
   </data>
 </root>
